Excluding modpatch transitive dependencies which have disappeared from the Maven central